Continuing ride look-up
