# service/src/main/java/io/nuvalence/workmanager/service/controllers/DfcxApiDelegateImpl.java
@@ -6,9 +6,12 @@ import io.nuvalence.workmanager.service.generated.controllers.DfcxApiDelegate;
 import io.nuvalence.workmanager.service.generated.models.DialogflowSessionInfo;
 import io.nuvalence.workmanager.service.generated.models.DialogflowWebhookRequest;
 import io.nuvalence.workmanager.service.generated.models.DialogflowWebhookResponse;
+import io.nuvalence.workmanager.service.mapper.DialogflowEntityMapper;
+import io.nuvalence.workmanager.service.mapper.RideMapper;
 import io.nuvalence.workmanager.service.models.RecordFilters;
 import io.nuvalence.workmanager.service.models.SearchTransactionsFilters;
-import io.nuvalence.workmanager.service.models.TransactionFilters;
+import io.nuvalence.workmanager.service.models.mta.DailyRideSummary;
+import io.nuvalence.workmanager.service.models.mta.RideSummary;
 import io.nuvalence.workmanager.service.service.RecordService;
 import io.nuvalence.workmanager.service.service.TransactionService;
 import lombok.RequiredArgsConstructor;
@@ -18,10 +21,11 @@ import org.springframework.data.domain.Page;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
 
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
-import java.util.Optional;
+import java.text.ParseException;
+import java.text.SimpleDateFormat;
+import java.util.*;
+
+import static java.util.stream.Collectors.groupingBy;
 
 @Service
 @RequiredArgsConstructor
@@ -31,9 +35,21 @@ public class DfcxApiDelegateImpl implements DfcxApiDelegate {
 
     private final RecordService recordService;
     private final TransactionService transactionService;
+    private final RideMapper rideMapper;
+    private final DialogflowEntityMapper dialogflowEntityMapper;
 
     @Override
-    public ResponseEntity<DialogflowWebhookResponse> riderLookup(
+    public ResponseEntity<DialogflowWebhookResponse> action(DialogflowWebhookRequest webhookRequest) {
+        String tag = webhookRequest.getFulfillmentInfo().getTag();
+
+        return switch (tag) {
+            case "rider-lookup" -> riderLookup(webhookRequest);
+            case "load-scheduled-rides" -> getRiderScheduledRides(webhookRequest);
+            default -> ResponseEntity.status(404).build();
+        };
+    }
+
+    private ResponseEntity<DialogflowWebhookResponse> riderLookup(
             DialogflowWebhookRequest webhookRequest) {
         final Map<String, Object> parametersIn = getRequestParameters(webhookRequest);
         final Map<String, Object> parametersOut = new HashMap<>();
@@ -57,8 +73,9 @@ public class DfcxApiDelegateImpl implements DfcxApiDelegate {
                     recordService.getRecordsByFilters(filters).stream().findFirst();
             if (foundRider.isPresent()) {
                 riderFound = true;
-                parametersOut.put(
-                        "$request.rider-name", foundRider.get().getData().get("fullName"));
+                parametersOut.put("user-id", foundRider.get().getSubjectUserId());
+                parametersOut.put("rider-name", foundRider.get().getData().get("fullName"));
+                parametersOut.put("rider-id", foundRider.get().getData().get("id"));
             }
         }
 
@@ -71,7 +88,7 @@ public class DfcxApiDelegateImpl implements DfcxApiDelegate {
         return ResponseEntity.status(riderFound ? 200 : 404).body(response);
     }
 
-    public ResponseEntity<DialogflowWebhookResponse> getRiderScheduledRides(
+    private ResponseEntity<DialogflowWebhookResponse> getRiderScheduledRides(
             DialogflowWebhookRequest webhookRequest) {
         final Map<String, Object> parametersIn = getRequestParameters(webhookRequest);
         final Map<String, Object> parametersOut = new HashMap<>();
@@ -90,8 +107,18 @@ public class DfcxApiDelegateImpl implements DfcxApiDelegate {
 
             Page<Transaction> pagedTransactions = transactionService.getFilteredTransactions(filters);
             if (!pagedTransactions.isEmpty()) {
-
+                List<DailyRideSummary> dailySummaries = pagedTransactions.stream()
+                        .map(t -> rideMapper.mapEntityToRideSummary(t.getData()))
+                        .collect(groupingBy(r -> toSortableDate(r.getPickup())))
+                        .entrySet()
+                        .stream().map(this::toDailyRideSummary)
+                        .toList();
+                parametersOut.put("$flow.scheduled-rides", dailySummaries);
+            } else {
+                parametersOut.put("$flow.scheduled-rides", List.of());
             }
+        } else {
+            parametersOut.put("$flow.scheduled-rides", List.of());
         }
 
         DialogflowWebhookResponse response =
@@ -99,6 +126,23 @@ public class DfcxApiDelegateImpl implements DfcxApiDelegate {
                         .sessionInfo(new DialogflowSessionInfo().parameters(parametersOut));
 
         return ResponseEntity.status(200).body(response);
+    }
+
+    private DailyRideSummary toDailyRideSummary(Map.Entry<String, List<RideSummary>> rides) {
+        try {
+            return DailyRideSummary.builder()
+                    .formattedDate(rides.getKey())
+                    .date(dialogflowEntityMapper.mapStringToSysDate(rides.getKey()))
+                    .rides(rides.getValue())
+                    .build();
+        } catch (ParseException e) {
+            throw new RuntimeException(e);
+        }
+    }
+
+    private String toSortableDate(Date date) {
+        SimpleDateFormat sdf = new SimpleDateFormat("yyyyMMdd", Locale.ROOT);
+        return sdf.format(date);
     }
 
     private Map<String, Object> getRequestParameters(DialogflowWebhookRequest webhookRequest) {
