# service/src/main/java/io/nuvalence/workmanager/service/models/dfcx/SysDate.java
@@ -1,0 +1,16 @@
+package io.nuvalence.workmanager.service.models.dfcx;
+
+import lombok.AllArgsConstructor;
+import lombok.Builder;
+import lombok.Data;
+import lombok.NoArgsConstructor;
+
+@Data
+@Builder
+@AllArgsConstructor
+@NoArgsConstructor
+public class SysDate {
+    private int day;
+    private int month;
+    private int year;
+}
