# swagger.yaml
@@ -2721,13 +2721,12 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ResponseMessageModel'
-  /dfcx/rider-lookup:
+  /dfcx/action:
     post:
-      summary: Looks up a rider with the provided Rider ID.
-      operationId: riderLookup.
+      summary: Executes a dialogflow action with the provided tag.
+      operationId: action
       tags:
         - DFCX
-        - Rider
       requestBody:
         description: The webhook request body.
         required: true
@@ -2737,29 +2736,7 @@ paths:
               $ref: '#/components/schemas/DialogflowWebhookRequest'
       responses:
         '200':
-          description: Successfully found a rider with the provided rider id
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/DialogflowWebhookResponse'
-  /dfcx/rider-scheduled-rides:
-    post:
-      summary: Gets the non-cancelled and non-completed rides for the specified rider.
-      operationId: getRiderScheduledRides.
-      tags:
-        - DFCX
-        - Ride
-        - Rider
-      requestBody:
-        description: The webhook request body.
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/DialogflowWebhookRequest'
-      responses:
-        '200':
-          description: A list of rides.
+          description: Successfully executed the action.
           content:
             application/json:
               schema:
@@ -4642,15 +4619,6 @@ components:
           type: number
         magnitude:
           type: number
-    DialogflowSysDate:
-      type: object
-      properties:
-        year:
-          type: integer
-        month:
-          type: integer
-        day:
-          type: integer
 
     Error:
       type: "object"
